auth routes and email
added auth routes and emailing and added max length to usernames

--- a/app/db/beaver.env
+++ b/app/db/beaver.env
@@ -1,1 +1,3 @@
 DATABASE_URL=postgresql+asyncpg://neondb_owner:npg_V1jaiJLo6exE@ep-lingering-frog-a201kxn7-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require
+MAIL_USERNAME=hoibeaver@gmail.com
+MAIL_PASSWORD=inehcwvipfcovuxf 
